Continue working on color change for selection in quiz, begin to try and organize cards for quiz results using state

--- a/src/index.css
+++ b/src/index.css
@@ -333,7 +333,7 @@ div {
     color: white;
 }
 
-.options li:active {
+.options li:hover {
     background-color: var(--creamy-latte);
     color: var(--espresso-brown);
 }
