--- a/src/index.css
+++ b/src/index.css
@@ -381,7 +381,7 @@ footer p {
 /* profile page */
 img.profile-picture-edit {
     max-width: 200px;
-    max-height: 200px;
+    height: 200px;
     border-radius: 50%;
     margin-right: 100px;
     margin-left: 100px;
@@ -391,7 +391,7 @@ img.profile-picture-edit {
 
 img.profile-picture {
     max-width: 200px;
-    max-height: 200px;
+    height: 200px;
     border-radius: 50%;
     margin-right: auto;
     margin-left: auto;
