Add bottom padding to main for explore page to reach bottom

--- a/src/index.css
+++ b/src/index.css
@@ -376,6 +376,9 @@ footer p {
     justify-content: space-around;
 }
 
+.main-explore-padding {
+    padding-bottom: 10rem;
+}
 
 /* profile page */
 img.profile-picture-edit {
